--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+                    <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,19 @@
 </head>
 <body>
         <h1>Catálogo</h1>
-            <p>Filmes de i a z</p>
-</body>
+            <p>FILMES DE I a Z</p>
+               <h2> TOP 10 FILMES</h2>
+      <p> </p>
+
+
+
+
+
+
+
+
+
+
+</body>      
+
 </html>
